[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/flour.png" type="Texture" id=1]
[ext_resource path="res://FeedUi.gd" type="Script" id=2]

[sub_resource type="Animation" id=4]
resource_name = "Feed"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.25, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.0, 8.0, -8.0, 8.0, 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "MoveLeft"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ), Vector2( -100, 0 ), Vector2( 100, 0 ), Vector2( 24, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "MoveRight"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ), Vector2( 100, 0 ), Vector2( -100, 0 ), Vector2( 24, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextureRect:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="FeedUI" type="Control"]
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
item_names = [ "a", "b", "c" ]
item_colours = [ Color( 1, 1, 1, 1 ), Color( 0.843137, 0.121569, 0.121569, 1 ), Color( 0.0705882, 0.858824, 0.298039, 1 ) ]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 112.0
margin_bottom = 597.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 112.0
margin_bottom = 64.0

[node name="LButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 64.0
text = "<"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
margin_left = 24.0
margin_right = 88.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 26, 40 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/HBoxContainer/TextureRect"]
root_node = NodePath("../..")
anims/Feed = SubResource( 4 )
anims/MoveLeft = SubResource( 1 )
anims/MoveRight = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="TransitionTimer" type="Timer" parent="VBoxContainer/HBoxContainer/TextureRect"]
wait_time = 0.2
one_shot = true

[node name="RButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 112.0
margin_bottom = 64.0
text = ">"

[node name="NameLabel" type="Label" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 112.0
margin_bottom = 82.0
text = "item"
align = 1
valign = 1

[node name="QtyLabel" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 112.0
margin_bottom = 100.0
text = "0"
align = 1
valign = 1

[node name="FeedButton" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 112.0
margin_bottom = 124.0
text = "Feed"
